k8s/apps/development/gitea/ingress-ssh.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroutetcp_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ssh-internal
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitea-gitea-ssh
          port: 22
          proxyProtocol:
            version: 2
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroutetcp_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ssh-external
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: ingress-external-traefik
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitea-gitea-ssh
          port: 22
          proxyProtocol:
            version: 2
